fix loi trong input.css

--- a/input.html
+++ b/input.html
@@ -118,7 +118,7 @@
     <div class="NutBam">
       <button onclick="NhapDuLieu()">LƯU</button>
       <a href="/"><button>QUAY LẠI</button></a>
-      <button onclick="tuyenDemo()">TUYẾN LOCAL</button>
+      <button onclick="tuyenDemo()">T. GẦN NHẤT</button>
     </div>
   </div>
 </body>
